# knowledge_base_search

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
data/: golden_set.json  infra_provisioning.md  sme_contacts.json  source_inventory.json  staff_directory.json
docker/postgres/: init.sql
documentation/: advanced_rag.md  architecture.md  clean_sample_docs.md  features.md  inference.md  presentation.md  reference.md  test_guardrail.md
kb/: __init__.py  cli.py  settings.py  types.py
kb/chunking/: __init__.py  parent_child.py  structural.py  tokens.py
kb/classifier/: __init__.py  sensitivity.py
kb/connectors/: __init__.py  base.py  localfs.py
kb/embeddings/: __init__.py  client.py
kb/enrichment/: __init__.py  enricher.py  llm_client.py  questions.py  summary.py
kb/eval/: __init__.py  calibration.py  checks.py  history.py  ragas_batch.py  runner.py  types.py  users.py
kb/generation/: __init__.py  (+9 more)
scripts/: clean_pdf_margins.py  requirements.txt  smoke_test.py
tests/: test_eval_golden.py  test_generation_citations.py  test_generation_confidence.py  test_generation_context.py  test_generation_faithfulness.py  test_generation_generator.py  test_generation_nli.py  test_generation_prompt.py  test_generation_segmentation.py  test_generation_sessions.py  test_guardrails.py  test_preprocessing_pdf_margins.py  test_retrieval_acl.py  test_retrieval_fusion.py  test_retrieval_rerank.py  test_retrieval_rewrite.py  test_retrieval_rewrite_conv.py  test_sessions_manager.py  test_sessions_store.py
(+46 files in other folders)
